tests/baselines/reference/unusedLocalsInMethod2.errors.txt
tests/cases/compiler/unusedLocalsInMethod2.ts(3,9): error TS6199: All variables are unused.


==== tests/cases/compiler/unusedLocalsInMethod2.ts (1 errors) ====
    class greeter {
        public function1() {
            var x, y = 10;
            ~~~~~~~~~~~~~~
!!! error TS6199: All variables are unused.
            y++;
        }
    }